--- a/docroot/sites/all/modules/contrib/migrate/CHANGELOG.txt
+++ b/docroot/sites/all/modules/contrib/migrate/CHANGELOG.txt
@@ -1,6 +1,6 @@
 
-Migrate 2.6 Beta 1
-==================
+Migrate 2.6 Release Candidate 1
+===============================
 
 Migration developers will need to add the "advanced migration information"
 permission to their roles to continue seeing all the info in the UI they're
@@ -16,6 +16,39 @@ Migration class constructors should now always accept a $arguments array as
 the first parameter and pass it to its parent. This version does support legacy
 migrations which pass a group object, or nothing, but that support will be
 removed in a future version.
+
+Features and enhancements
+- #1998632 - Extend MigrateItemsXML to handle an array of XML files.
+- #1990612 - Add a row status argument to MigrateException, allowing rows to
+             be cleanly skipped by throwing exceptions.
+- #2017835 - Add MigrateFileUriAsIs file class, and make file migrations more
+             flexible.
+- #2004426 - UI support for editing dependencies; enable setting dependencies
+             through arguments.
+
+Bug fixes
+- #2025137 - Ignore --update in the presence of --idlist.
+- #2023813 - Apply defaultValue() for empty XML values.
+- #2023657 - Prevent duplicate aliases when updating nodes.
+- #2021973 - Drush deregistration needs to handle mixed-case machine names.
+- #2017443 - Properly hash XML source rows with track_changes on.
+- #2020095 - Preserve arguments in legacy constructors.
+- #2018841 - Default field handler needs to account for empty column
+             descriptions.
+- #2016173 - Fix fatal error editing MigrationBase migrations.
+- #2015327 - Remove broken automatic field mapping feature.
+- #2014849 - Make sure statistics properly default to 0.
+- #2011024 - Wildcard groups/tasks in the menu hierarchy, saving the need to
+             rebuild menus when migrations are registered/deregistered.
+- #2010884 - Clean up empty default groups on dbupdate.
+- #2004296 - Enforce map/message table names with prefixes.
+- #2009222 - Properly update map/message tables on a non-default connection.
+- #2006158 - Fix warnings on default field handler fields().
+- #1999918 - Move permissions to core Migrate module.
+- #1999290 - Check that an XMLMigration has actually populated $row->xml.
+
+Migrate 2.6 Beta 1
+==================
 
 Features and enhancements
 - #1826112 - A new API has been added to support external modules in developing
